--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet">
+	<link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap-grid.css" rel="stylesheet">
+	<script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.js"></script>
+	<title>Keep Talking Assistant</title>
+	<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+	<script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.js"></script>
 </head>
 <body>
+<div class="container">
+	<nav class="navbar navbar-expand-sm bg-light">
+		<ul class="navbar-nav">
+			<li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+			<li class="nav-item"><a class="nav-link" href="complicated-wires.html">Complicated Wires</a></li>
+			<li class="nav-item"><a class="nav-link" href="wire-sequence.html">Wire Sequence</a></li>
+			<li class="nav-item"><a class="nav-link" href="password.html">Password</a></li>
+		</ul>
+	</nav>
+	<h1>Keep Talking Assistant
+		<small>Version 1 / Revision 3</small>
+	</h1>
 
+
+	<p>No warranty. Defuse the bomb at your own risk.</p>
+</div>
 </body>
 </html>
