--- a/index.html
+++ b/index.html
@@ -2,29 +2,40 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet">
-	<link href="https://cdn.bootcss.com/bootstrap/4.1.1/css/bootstrap-grid.css" rel="stylesheet">
-	<script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.bundle.js"></script>
 	<title>Keep Talking Assistant</title>
-	<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-	<script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.js"></script>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap-grid.min.css" rel="stylesheet">
+	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <div class="container">
 	<nav class="navbar navbar-expand-sm bg-light">
-		<ul class="navbar-nav">
-			<li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+		<ul class="nav nav-tabs">
+			<li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
 			<li class="nav-item"><a class="nav-link" href="complicated-wires.html">Complicated Wires</a></li>
-			<li class="nav-item"><a class="nav-link" href="wire-sequence.html">Wire Sequence</a></li>
+			<li class="nav-item"><a class="nav-link" href="#">Wire Sequence</a></li>
 			<li class="nav-item"><a class="nav-link" href="password.html">Password</a></li>
 		</ul>
 	</nav>
-	<h1>Keep Talking Assistant
-		<small>Version 1 / Revision 3</small>
-	</h1>
+	<div class="container">
+		<h1>Keep Talking Assistant
+			<small>Version 1 / Revision 3</small>
+		</h1>
 
+		<h2>Verification Code: 241</h2>
 
-	<p>No warranty. Defuse the bomb at your own risk.</p>
+		<div class="alert alert-danger">
+			Only limited function is implemented. ALWAYS Refer to the manual.
+		</div>
+
+		<p>This tool is used for defusing bomb according to the BOMB DEFUSAL MANUAL of KEEP TALKING AND NOBODY EXPLODES</p>
+
+		<p>Developed by Inku Xuan</p>
+
+		<p>No warranty. Defuse the bomb at your own risk.</p>
+	</div>
 </div>
 </body>
 </html>
