--- a/complicated-wires.html
+++ b/complicated-wires.html
@@ -23,6 +23,7 @@
 		<h1>Keep Talking Assistant
 			<small>Version 1 / Revision 3</small>
 		</h1>
+		<p>&copy;2018 Inku Xuan</p>
 		<div class="card">
 			<div class="card-body" onchange="refreshResult()">
 				<form id="form1">
