--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<p>This tool is used for defusing bomb according to the BOMB DEFUSAL MANUAL of KEEP TALKING AND NOBODY EXPLODES</p>
 
 		<p>Developed by Inku Xuan</p>
+		<p>&copy;2018 Inku Xuan</p>
 
 		<p>No warranty. Defuse the bomb at your own risk.</p>
 	</div>
