--- a/password.html
+++ b/password.html
@@ -29,6 +29,7 @@
 		<h1>Keep Talking Assistant
 			<small>Version 1 / Revision 3</small>
 		</h1>
+		<p>&copy;2018 Inku Xuan</p>
 		<div class="card">
 			<div class="card-body">
 				<form id="form1" oninput="refreshResult()">
@@ -158,11 +159,17 @@
 	function showCandidates() {
 		let resultNode = $("#result")
 		resultNode.html("");
-		candidates.forEach(function (item, index) {
-			resultNode.append(item);
-			if (index < candidates.length - 1)
-				resultNode.append("<br>");
-		})
+		if(candidates.length===0){
+			resultNode.html("<div class=\"alert alert-danger\">" +
+				"No candidate found. Check all letters!" +
+				"</div>")
+		} else {
+			candidates.forEach(function (item, index) {
+				resultNode.append(item);
+				if (index < candidates.length - 1)
+					resultNode.append("<br>");
+			});
+		}
 	}
 </script>
 </body>
